k3s/master_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agri-app-master
  name: svc-agri-app-master
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30080
  selector:
    app: agri-app-master
  type: NodePort
status:
  loadBalancer: {}
