k3s/master_winx64.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agri-app-master
  name: agri-app-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agri-app-master
  strategy: {}
  template:
    metadata:
      labels:
        app: agri-app-master
    spec:
      containers:
      - args:
        - agri_app_master
        image: dhaura/agri-app-master:latest-x64
        name: master
        ports:
        - containerPort: 80
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: agri-app-master
  name: svc-agri-app-master
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: agri-app-master
  type: LoadBalancer
status:
  loadBalancer: {}
