k3s/master_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-agri-app
spec:
  ingressClassName: traefik
  rules:
# - host: myapp.com
#   http:
#      paths:
#         backend:
#           service:
  - host: localhost
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
      - path: /predict_disease
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
      - path: /read_temperature/(\d+)$
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
      - path: /read_humidity/(\d+)$
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
